crates/iroha_telemetry_derive/tests/ui_fail/not_execute.stderr
error: Function should be an `impl execute`
 --> tests/ui_fail/not_execute.rs:6:4
  |
6 | fn exequte(_state_transaction: &StateTransaction) -> Result<(), ()> {
  |    ^^^^^^^
